<resources>
    <string name="app_name">LearningSystem</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome!</string>
    <string name="add_new_lesson">Add new lesson</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">sign up</string>
</resources>
